--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,10 @@
 .App-link {
   color: #09d3ac;
 }
+
+.tbody {
+  display: block;
+  max-height: 100%;
+  /* max-height: 550px; */
+  overflow: auto;
+}
