--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,8 @@
 
 .tbody {
   display: block;
-  max-height: 100%;
-  /* max-height: 550px; */
+  /* max-height: 100%; */
+  max-height: 550px;
   overflow: auto;
 }
 
